fixed images out of place

--- a/style/style.css
+++ b/style/style.css
@@ -474,7 +474,57 @@ a:visited{
     height: auto;
     border-radius: 2px;
 }
-
+#img2-22{
+    width: 300px;
+}
+#img2-23{
+    width: 280px;
+}
+#img2-24{
+    width: 280px;
+}
+#img2-25{
+    width: 280px;
+}
+#img2-26{
+    width: 280px;
+}
+#img2-27{
+    width: 280px;
+}
+#img2-28{
+    width: 280px;
+}
+#img2-29{
+    width: 280px;
+}
+#img2-30{
+    width: 280px;
+}
+#img2-31{
+    width: 280px;
+}
+#img2-36{
+    width: 280px;
+}
+#img2-37{
+    width: 280px;
+}
+#img2-38{
+    width: 280px;
+}
+#img2-46{
+    width: 380px;
+}
+#img2-47{
+    width: 380px;
+}
+#img2-48{
+    width: 380px;
+}
+#img2-52{
+    width: 390px;
+}
 
 
 
@@ -510,6 +560,57 @@ a:visited{
     }
     .dark-mode-light-mode{
         font-size: small;
+    }
+    #img2-22{
+        width: 230px;
+    }
+    #img2-23{
+        width: 230px;
+    }
+    #img2-24{
+        width: 230px;
+    }
+    #img2-25{
+        width: 230px;
+    }
+    #img2-26{
+        width: 230px;
+    }
+    #img2-27{
+        width: 230px;
+    }
+    #img2-28{
+        width: 230px;
+    }
+    #img2-29{
+        width: 230px;
+    }
+    #img2-30{
+        width: 230px;
+    }
+    #img2-31{
+        width: 230px;
+    }
+    #img2-36{
+        width: 230px;
+    }
+    #img2-37{
+        width: 230px;
+    }
+    #img2-38{
+        width: 230px;
+    }
+    #img2-46{
+        width: 230px;
+    }
+    #img2-47{
+        width: 210px;
+    }
+    #img2-48{
+        width: 210px;
+    }
+    #img2-52{
+        width: 215px;
     }
     
 }
